<resources>
    <string name="app_name">Guide2Inspections</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_nav_1">Dashboard</string>
    <string name="menu_nav_2">Profile</string>
    <string name="menu_nav_3">Current Inspection</string>
    <string name="menu_nav_4">Generate Report</string>
    <string name="menu_nav_5">Contact Us</string>

    <string name="the_concept">How we conceptualize a ship inspection-preparation is much different from conventional methods. We work with companies, training institutes or Pre-Vetting Inspectors to develop their inspection processes and improve results. There’s a ton of Free stuff for seafarers.\nTo know how we do it, and the many benefits involved, view a demo, or contact us. We shall be happy to personalize a demo exclusively for you!</string>
    <string name="login_footer_text">You are not a member? <font color='#F23B5F'>Register</font>.</string>
    <string name="register_footer_text">Already have an account? <font color='#F23B5F'>Login</font>.</string>

    <string name="err_msg_message_network">It Seems you don\'t have active internet connection.</string>
    <string name="err_msg_account_exist">We already have account registered with this email.</string>
    <string name="err_msg_login">Incorrect email/password</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter your valid email address</string>
    <string name="err_reg_email">Enter your registered email address</string>
    <string name="err_msg_password">Enter your password</string>
    <string name="err_msg_password_length">Password must be at least 8 characters long</string>
    <string name="err_msg_position">Select your Position</string>
    <string name="err_msg_shiptype">Select your Ship Type</string>
    <string name="err_msg_res_failed">Something went wrong. Please try again later.</string>
    <string name="err_msg_format_error">File format does not supported.</string>
    <string name="err_msg_ship_name">Enter ship name</string>

    <string name="txt_ya">Yes</string>
    <string name="txt_no">No</string>
    <string name="txt_na">Not Applicable</string>
    <string name="txt_comment">❝%1$s❞</string>
    <string name="hint_comment">Enter Comment (if any)</string>
    <string name="hint_comment_dialog">Comment..</string>
    <string name="txt_save">Save</string>
    <string name="txt_proceed">Proceed</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_add_comment">Add Comment</string>
    <string name="txt_edit_comment">Edit Comment</string>
    <string name="txt_link">Click to view example</string>
    <string name="txt_empty_report">You need to complete any section before generating a report for that.</string>
    <string name="view_report_text">Wish to view this report? <font color='#56F23B5F'>View</font>.</string>
    <string name="txt_email_body">
        <![CDATA[
        <p>Hello,<br /></p>
        <p>Please find attachment to this mail a copy of the Section Report.<br /></p>
        <h3>CONFIDENTIAL: This email and any files transmitted with it are confidential and intended solely for the use of the individual or entity to whom they are addressed. If you have received this email in error please notify the system manager.<br /><br /><br /></h3>
        <p>Regards,<br />Navigator Guide Team<br /></p>
        ]]>
    </string>
    <string name="txt_email_subject_for_access">Regarding access of %1$s section</string>
    <string name="txt_email_body_for_access">
        <![CDATA[
        <p>Hello Admin,<br /></p>
        <p>I am writing this email for requesting access of %1$s section. I would inspect this section as a %2$S and Ship Type is %3$s.
        Please provide me access of %4$s section till the %5$s so I can complete the inspection process in the time specified.<br /></p>
        <br /><br />
        <p>Regards,<br />%6$s<br /></p>
        ]]>
    </string>
    <!-- strings for dialog -->
    <string name="string_permission_help">Help</string>
    <string name="string_permission_help_text">The permission is missing.\n\nTo grant this permission click on Settings, then Permissions and turn the permission on.\n\nThen click back twice to return to the app</string>
    <string name="string_permission_quit">Exit App</string>
    <string name="string_settings">Settings</string>
    <string name="txt_attention">Attention!</string>

    <string name="txt_reset_title">Reset Records</string>
    <string name="txt_reset_message">Are you sure you want to reset all inspection records permanently?</string>
    <string name="txt_reset_yes">Yes, reset</string>
    <string name="txt_reset_no">No</string>

    <string name="txt_inspection_title">Confirm</string>
    <string name="txt_inspection_message">Before you proceed, please enter the ship\'s name which you are going to be inspect.</string>
    <string name="txt_inspecting_message">Before you proceed, let us inform you that you are going to be inspect <font color='#F23B5F'>%1$s</font>.</string>
    <string name="txt_inspection_yes">Ok, take me there</string>
    <string name="txt_inspecting_yes">Yes, I know</string>
    <string name="txt_inspection_no">Not now</string>
    <string name="txt_inspecting_no">No, lets change</string>

    <string name="txt_access_title">Section Unlock</string>
    <string name="txt_access_message">You are not allowed to access this section. If you wish to access please select extension date and contact to Administrator.</string>
    <string name="txt_access_yes">Yes, please</string>
    <string name="txt_access_no">No</string>
    <string name="show_all">Show All</string>
    <string name="reset">Reset</string>
    <string name="hide">Hide</string>

</resources>