<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_dashboard"
            android:title="@string/menu_nav_1" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_account_box"
            android:title="@string/menu_nav_2" />
        <item
            android:id="@+id/nav_inspection"
            android:icon="@drawable/ic_baseline_assignment"
            android:title="@string/menu_nav_3" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_baseline_report"
            android:title="@string/menu_nav_4" />
        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/ic_baseline_contact"
            android:title="@string/menu_nav_5" />
    </group>
</menu>